# ebs-lib-graphics

python/: MANIFEST.in  README.rst  setup.py
python/ebs/graphics/: __init__.py  image.py  stats.py
python/ebs/graphics/templates/: image.c  image.h
src/: CMakeLists.txt  config.h.in  image.c  image.h  palette.c  palette.h
